:lipstick: 添加私密分享文件的验证功能